--- a/package.json
+++ b/package.json
@@ -7,34 +7,91 @@
   "dependencies": {
     "@fastify/autoload": "~5.7.1",
     "@fastify/sensible": "~5.2.0",
+    "@swc/helpers": "~0.5.2",
     "axios": "^1.0.0",
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
-    "tslib": "^2.3.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-is": "18.2.0",
+    "react-router-dom": "6.11.2",
+    "styled-components": "5.3.6",
+    "tslib": "^2.3.0",
+    "web-vitals": "^0.2.4",
+    "workbox-background-sync": "^5.1.4",
+    "workbox-broadcast-update": "^5.1.4",
+    "workbox-cacheable-response": "^5.1.4",
+    "workbox-core": "^5.1.4",
+    "workbox-expiration": "^5.1.4",
+    "workbox-google-analytics": "^5.1.4",
+    "workbox-navigation-preload": "^5.1.4",
+    "workbox-precaching": "^5.1.4",
+    "workbox-range-requests": "^5.1.4",
+    "workbox-routing": "^5.1.4",
+    "workbox-strategies": "^5.1.4",
+    "workbox-streams": "^5.1.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@nx/cypress": "17.1.3",
     "@nx/esbuild": "17.1.3",
     "@nx/eslint": "17.1.3",
     "@nx/eslint-plugin": "17.1.3",
     "@nx/jest": "17.1.3",
-    "@nx/js": "17.1.3",
+    "@nx/js": "17.2.0-beta.12",
     "@nx/node": "17.1.3",
+    "@nx/react": "^17.2.0-beta.12",
+    "@nx/vite": "17.2.0-beta.12",
+    "@nx/webpack": "17.1.3",
     "@nx/workspace": "17.1.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.6.7",
+    "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
+    "@swc/plugin-styled-components": "^1.5.67",
+    "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
-    "@types/node": "~18.7.1",
+    "@types/node": "18.14.2",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
+    "@types/react-is": "18.2.2",
+    "@types/react-router-dom": "5.3.3",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitest/coverage-v8": "~0.34.6",
+    "@vitest/ui": "~0.34.6",
+    "babel-jest": "^29.4.1",
+    "cypress": "^13.0.0",
     "esbuild": "^0.19.2",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-cypress": "^2.13.4",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "jsdom": "~22.1.0",
     "nx": "17.1.3",
     "prettier": "^2.6.2",
+    "prisma": "^5.6.0",
+    "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.2.2"
+    "typescript": "~5.2.2",
+    "url-loader": "^4.1.1",
+    "verdaccio": "^5.0.4",
+    "vite": "^5.0.0",
+    "vitest": "~0.34.6"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
