--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "private": true,
   "dependencies": {
     "@fastify/autoload": "~5.7.1",
+    "@fastify/cors": "^8.4.2",
     "@fastify/sensible": "~5.2.0",
+    "@fluentui/react-components": "^9.42.0",
+    "@prisma/client": "^5.7.0",
     "@swc/helpers": "~0.5.2",
-    "axios": "^1.0.0",
+    "axios": "^1.6.2",
+    "clsx": "^2.0.0",
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
     "react-is": "18.2.0",
     "react-router-dom": "6.11.2",
     "styled-components": "5.3.6",
@@ -65,6 +71,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "@vitest/coverage-v8": "~0.34.6",
     "@vitest/ui": "~0.34.6",
+    "autoprefixer": "^10.4.16",
     "babel-jest": "^29.4.1",
     "cypress": "^13.0.0",
     "esbuild": "^0.19.2",
@@ -80,9 +87,11 @@
     "jest-environment-node": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "17.1.3",
+    "postcss": "^8.4.32",
     "prettier": "^2.6.2",
-    "prisma": "^5.6.0",
+    "prisma": "^5.7.0",
     "react-refresh": "^0.10.0",
+    "tailwindcss": "^3.3.6",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2",
