--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://ab:@localhost:5432/mediware?schema=public"
+
+HOST = "127.0.0.1"
+PORT = 3000
