--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "clear": "nx reset",
     "api": "nx run billing-api:serve:development",
-    "web": "nx run billing-web:serve:development"
+    "web": "nx run billing-web:serve:development",
+    "dev": "concurrently \"nx run billing-api:serve:development\" \"nx run billing-web:serve:development\""
   },
   "private": true,
   "dependencies": {
@@ -17,6 +18,7 @@
     "@swc/helpers": "~0.5.2",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
+    "concurrently": "^8.2.2",
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
     "moment": "^2.29.4",
