--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://ab:@localhost:5432/mediware?schema=public"
+DATABASE_URL="postgresql://postgres:1234@localhost:5432/mediware?schema=public"
 
-HOST = "127.0.0.1"
+HOST = "0.0.0.0"
 PORT = 3000
