--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "clear": "nx reset",
     "dev": "concurrently \"nx run billing-api:serve:development\" \"nx run billing-web:serve:development\"",
+    "migrate": "prisma db push",
     "api:run": "nx run billing-api:serve:development",
     "web:run": "nx run billing-web:serve:development",
     "api:build": "nx run billing-api:build:production",
@@ -17,7 +18,7 @@
     "@fastify/cors": "^8.4.2",
     "@fastify/sensible": "~5.2.0",
     "@fluentui/react-components": "^9.42.0",
-    "@prisma/client": "^5.7.0",
+    "@prisma/client": "^5.7.1",
     "@swc/helpers": "~0.5.2",
     "axios": "^1.6.2",
     "clsx": "^2.0.0",
@@ -98,7 +99,7 @@
     "nx": "17.1.3",
     "postcss": "^8.4.32",
     "prettier": "^2.6.2",
-    "prisma": "^5.7.0",
+    "prisma": "^5.7.1",
     "react-refresh": "^0.10.0",
     "tailwindcss": "^3.3.6",
     "ts-jest": "^29.1.0",
