schema: added few variations in forms and schema (#15)

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "concurrently \"nx run billing-api:serve:development\" \"nx run billing-web:serve:development\"",
     "migrate": "prisma db push",
     "studio": "prisma studio",
+    "wipe":"dropdb mediware",
     "api:run": "nx run billing-api:serve:development",
     "web:run": "nx run billing-web:serve:development",
     "api:build": "nx run billing-api:build:production",
