--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "@mediware/source",
+  "displayName": "Mediware",
+  "description": "Your Precision Partner",
+  "author": {
+    "email": "abubakar.mughal2ooo@icloud.com",
+    "name": "Abu Bakar Asif",
+    "url": "https://github.com/abubakar2000"
+  },
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "clear": "nx reset",
-    "dev": "concurrently \"nx run billing-api:serve:development\" \"nx run billing-web:serve:development\"",
+    "dev-old": "concurrently \"nx run billing-api:serve:development\" \"nx run billing-web:serve:development\"",
+    "dev": " npx nx run-many --target=serve --projects=billing-api,billing-web",
     "migrate": "prisma db push",
     "studio": "prisma studio",
-    "wipe":"dropdb mediware",
+    "wipe": "dropdb mediware",
     "api:run": "nx run billing-api:serve:development",
     "web:run": "nx run billing-web:serve:development",
     "api:build": "nx run billing-api:build:production",
@@ -18,6 +26,7 @@
   "dependencies": {
     "@fastify/autoload": "~5.7.1",
     "@fastify/cors": "^8.4.2",
+    "@fastify/jwt": "^7.2.4",
     "@fastify/sensible": "~5.2.0",
     "@fluentui/react-components": "^9.42.0",
     "@prisma/client": "^5.7.1",
